--- a/src/styles/cryptocurrencies.scss
+++ b/src/styles/cryptocurrencies.scss
@@ -1,3 +1,35 @@
+.searchbar {
+      margin: 20px auto;
+      margin-top: 100px;
+      margin-bottom: 50px;
+      max-width: calc(300px + 1vh);
+      position: relative;
+      &:hover {
+            .search-icon {
+                  color: red;
+            }
+      }
+      input {
+            background: rgb(255,255,255, 0);
+            min-width: 100%;
+            padding: 4px 10px;
+            border: none;
+            border: 2px #040185 solid;
+            border-radius: 8px;
+            &:hover,
+            &:focus,
+            &:active {
+                  outline: none;
+                  border: 2px red solid;
+            }
+      }
+      .search-icon {
+            position: absolute;
+            top: 5px;
+            right: 10px;
+            color: #040185;
+      }
+}
 .crypto-list {
       list-style: none;
       li {
@@ -7,6 +39,7 @@
             box-shadow: 3px 3px 8px 2px rgba(0,0,0,0.2);
             position: relative;
             transition: all 0.3s ease-in-out ;
+            margin: 20px;
             &:hover {
                   background: rgba(255,215,0,0.3);
                   transform: translateY(-5px);
