--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -31,6 +31,7 @@
                   margin-right: 20px;
                   color: red;
                   font-weight: bold;
+                  margin-top: 20px;
             }
       }
 
