--- a/src/styles/cryptodetails.scss
+++ b/src/styles/cryptodetails.scss
@@ -1,13 +1,23 @@
 .crypto-details {
-      padding: 20px;
-      h1, h2 {
+      padding: 0 20px;
+      h1, h2, h4 {
             font-size: calc(20px + 0.5vh);
             text-align: center;
             color: rgb(0, 0, 66);
-            margin: 20px 0;
+            margin-top: 50px;
       }
+      
+      h1 {
+            margin-top: 100px;
+      }
+
       h2 {
             font-size: calc(17px + 0.5vh);
+      }
+      h4 {
+            font-size: calc(10px + 0.5vh);
+            font-weight: 100;
+            margin: 20px 0 50px 0;
       }
       p {
             font-size: calc(10px + 0.5vh);
@@ -19,8 +29,45 @@
             margin-top: 50px;
             margin-bottom: 20px;
       }
-      .stat-item {
-            display: flex;
-            justify-content: space-between;
+      .currency-stat, .all-currency-stat {
+            .stat-item {
+                  display: flex;
+                  align-items: center;
+                  justify-content: space-between;
+                  margin-top: 10px;
+                  p {
+                        margin: 10px;
+                        text-align: left;
+                  }
+                  .stat-title {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                  }
+            }
+      }
+
+      .crypto-description {
+            p {
+                  text-align: justify;
+                  line-height: calc(30px + 0.5vh);
+            }
+      }
+      .more-info {
+            .links {
+                  margin: 20px;
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: center;
+                  p {
+                        text-align: left;
+                        text-transform: capitalize;
+                  }
+                  a {
+                        text-decoration: none;
+                        color: red;
+                        text-align: left;
+                  }
+            }
       }
 }
