--- a/src/styles/cryptodetails.scss
+++ b/src/styles/cryptodetails.scss
@@ -4,9 +4,10 @@
             font-size: calc(20px + 0.5vh);
             text-align: center;
             color: rgb(0, 0, 66);
-            margin-top: 50px;
+            margin-top: 100px;
+            margin-bottom: 20px;
       }
-      
+
       h1 {
             margin-top: 100px;
       }
@@ -18,6 +19,7 @@
             font-size: calc(10px + 0.5vh);
             font-weight: 100;
             margin: 20px 0 50px 0;
+            color: red;
       }
       p {
             font-size: calc(10px + 0.5vh);
@@ -48,6 +50,11 @@
       }
 
       .crypto-description {
+            h3 {
+                  margin: 20px 0;
+                  font-size: calc(15px + 0.5vh);
+                  color: red;
+            }
             p {
                   text-align: justify;
                   line-height: calc(30px + 0.5vh);
@@ -69,5 +76,27 @@
                         text-align: left;
                   }
             }
+      }
+}
+
+@media (min-width: 688px) {
+      .crypto-details {
+            .statistics-container,
+            .crypto-more-info {
+                  display: flex;
+                  justify-content: space-between;
+                  Align-items: flex-start;
+            }
+            .currency-stat,
+            .all-currency-stat {
+                  width: 50%;
+                  margin:  10px;
+            }
+
+      }
+      .more-info,
+      .crypto-description {
+            width: 50%;
+            margin: 10px;
       }
 }
