--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,27 +1,43 @@
+.App {
+  overflow: hidden;
+  position: relative;
+  main {
+    overflow: hidden;
+  }
+ 
+}
 .footer {
-      background: rgb(1, 0, 39);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      color: white;
-      padding: 20px;
-      h2,
-      p,
-      a {
-            font-size: calc(13px + 0.5vh);
-            margin: 5px;
-      }
+  margin-top: 100px;
+  background: rgb(26, 26, 26);
+  border-top: 2px solid gold;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  color: white;
+  padding: 20px;
+  h2,
+  p,
+  a {
+    font-size: calc(13px + 0.5vh);
+    margin: 5px;
+  }
 
-      a {
-            color: white;
-            text-decoration: none;
-      }
+  a {
+    color: gold;
+    text-decoration: none;
+    border: 1px gold solid;
+    padding: 10px;
+    transition: all 0.3s linear;
+    &:hover{
+      transform: rotateY(30deg);
+    }
+  }
 
-      h2 {
-            span {
-                  color: gold;
-            }
-      }
+  h2 {
+    span {
+      color: gold;
+    }
+  }
 }
