--- a/src/styles/Loader.scss
+++ b/src/styles/Loader.scss
@@ -6,8 +6,8 @@
       align-items: center;
       .bar {
             width: 80%;
-            border: 2px green solid;
-            height: 30px;
+            border: 1px gold solid;
+            height: 5px;
             border-radius: 10px;
             overflow: hidden;
             position: relative;
@@ -18,7 +18,7 @@
                   border-radius: 10px;
                   height: 100%;
                   width: 1000%;
-                  background: rgb(2,184,2);
+                  background: rgb(177, 151, 86);
                   animation: move 1s ease-in-out infinite;
             }
             @keyframes move {
@@ -32,7 +32,7 @@
       }
       p {
             font-size: calc(10px + 0.5vh);
-            color: red;
+            color: white;
             text-align: center;
             margin-top: 30px;
       }
