--- a/src/styles/cryptodetails.scss
+++ b/src/styles/cryptodetails.scss
@@ -8,8 +8,13 @@
             position: relative;
             margin-top: 50px;
             width: 100%;
+            height: 100vh;
+            display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
             h1 {
-                  margin-top: 80px;
+                  margin-top: -100px;
                     background: rgb(0,0,0, 0.5);
             padding: 20px; 
             }
