--- a/src/styles/news.scss
+++ b/src/styles/news.scss
@@ -1,9 +1,14 @@
 .news-title {
-      margin-top: 80px;
-      padding: 100px 20px;
+      padding: 20px;
+  //    padding: 100px 20px;
       background-image: url(../images/news-bg.jpg) ;
       background-size: cover;
       background-position: center;
+      height: 100vh;
+      display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
       &::before {
             content: '';
             height: 100%;
@@ -20,7 +25,6 @@
             font-size: calc(20px + 0.5vh);
             text-align: center;
             position: relative;
-            margin: auto ;
             z-index: 20;
       }
       p {
@@ -34,14 +38,14 @@
       h1 {
             font-size: calc(18px + 0.5vh);
             text-align: center;
-            margin: 50px 0 20px 0;
+         //   margin: 50px 0 20px 0;
       }
 }
 .news-list {
       position: relative;
       z-index: 20;
       overflow: hidden;
-      margin-top: 50px;
+  //    margin-top: 50px;
       a {
             text-decoration: none;
             color: inherit;
