--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
-
-
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+      box-sizing: border-box;
+      padding: 0;
+      margin: 0;
 }
 
 body {
-      background: rgb(26, 26, 26) ;
+      background: rgb(26, 26, 26);
+}
+
+h1, p, h2, h3, h4, h5{
+      font-family: roboto;
 }
