--- a/src/styles/cryptocurrencies.scss
+++ b/src/styles/cryptocurrencies.scss
@@ -10,7 +10,7 @@
       background-position: center;
       &::before {
             content: '';
-            height: 100%;
+            height: 100vh;
             width: 100%;
             background: rgb(0, 0, 0, 0.5);
             position: absolute;
