--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -15,7 +15,7 @@
             align-items: center;
             &::before {
                   content: '';
-                  height: 100%;
+                  height: 100vh;
                   width: 100%;
                   background: rgb(0, 0, 0, 0.5);
                   position: absolute;
@@ -148,7 +148,7 @@
             position: relative;
             &::before {
                   content: "";
-                  height: 100%;
+                  height: 100vh;
                   width: 100%;
                   position: absolute;
                   top: 0;
